boj: 1021 풀이
Closed #29